--- a/package.json
+++ b/package.json
@@ -8,9 +8,11 @@
     "react-devtools": "react-devtools"
   },
   "dependencies": {
+    "axios": "^0.18.0",
     "react": "16.6.1",
     "react-native": "0.57.7",
     "react-native-gesture-handler": "^1.0.10",
+    "react-native-maps": "^0.22.1",
     "react-native-vector-icons": "^6.1.0",
     "react-navigation": "^3.0.4"
   },
