Homework-3: fix code according to comments

--- a/.eslintrc
+++ b/.eslintrc
@@ -1,7 +1,12 @@
 {
   "plugins": [
+    "babel",
     "react",
     "react-native"
+  ],
+  "extends": [
+    "standard",
+    "standard-react"
   ],
   "parser": "babel-eslint",
   "parserOptions": {
