--- a/package.json
+++ b/package.json
@@ -21,6 +21,8 @@
     "babel-jest": "23.6.0",
     "babel-plugin-module-resolver": "^3.1.1",
     "eslint": "^5.9.0",
+    "eslint-config-standard": "^12.0.0",
+    "eslint-config-standard-react": "^7.0.2",
     "eslint-plugin-react": "^7.11.1",
     "eslint-plugin-react-native": "^3.5.0",
     "jest": "23.6.0",
