--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "react-native-gesture-handler": "^1.0.10",
     "react-native-maps": "^0.22.1",
     "react-native-vector-icons": "^6.1.0",
-    "react-navigation": "^3.0.4"
+    "react-navigation": "^3.0.4",
+    "react-navigation-drawer": "^1.0.5"
   },
   "devDependencies": {
     "babel-eslint": "^10.0.1",
@@ -23,6 +24,7 @@
     "eslint": "^5.9.0",
     "eslint-config-standard": "^12.0.0",
     "eslint-config-standard-react": "^7.0.2",
+    "eslint-plugin-import": "^2.14.0",
     "eslint-plugin-react": "^7.11.1",
     "eslint-plugin-react-native": "^3.5.0",
     "jest": "23.6.0",
