--- a/android/build.gradle
+++ b/android/build.gradle
@@ -24,6 +24,17 @@ buildscript {
 
 allprojects {
     repositories {
+        configurations.all {
+            resolutionStrategy.eachDependency {
+                DependencyResolveDetails details -> def requested = details.requested
+                if (requested.group == 'com.google.android.gms') {
+                    details.useVersion '12.0.1'
+                }
+                if (requested.group == 'com.google.firebase') {
+                    details.useVersion '12.0.1'
+                }
+            }
+        }
         mavenLocal()
         google()
         jcenter()
