--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "react-native-gesture-handler": "^1.0.10",
     "react-native-maps": "^0.22.1",
     "react-native-splash-screen": "^3.1.1",
+    "react-native-push-notification": "^3.1.2",
     "react-native-vector-icons": "^6.1.0",
     "react-navigation": "^3.0.4",
     "react-navigation-drawer": "^1.0.5"
