--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -145,6 +145,7 @@ dependencies {
     compile project(':react-native-splash-screen')
     compile project(':lottie-react-native')
     compile project(':react-native-device-info')
+    compile project(':react-native-push-notification')
     compile project(':react-native-maps')
     compile project(':react-native-vector-icons')
     compile project(':react-native-gesture-handler')
