--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -142,6 +142,7 @@ android {
 }
 
 dependencies {
+    compile project(':bugsnag-react-native')
     compile project(':react-native-splash-screen')
     compile project(':lottie-react-native')
     compile project(':react-native-device-info')
