--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
     "react-native-splash-screen": "^3.1.1",
     "react-native-vector-icons": "^6.1.0",
     "react-navigation": "^3.0.4",
-    "react-navigation-drawer": "^1.0.5"
+    "react-navigation-drawer": "^1.0.5",
+    "rn-secure-storage": "^1.0.82"
   },
   "devDependencies": {
     "babel-eslint": "^10.0.1",
